--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <cdk.version>2.29.1</cdk.version>
         <constructs.version>[10.0.0,11.0.0)</constructs.version>
         <junit.version>5.7.1</junit.version>
+        <spotless.version>2.22.8</spotless.version>
     </properties>
 
     <build>
@@ -32,6 +33,20 @@
                 <version>3.0.0</version>
                 <configuration>
                     <mainClass>com.myorg.TicketsApp</mainClass>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.diffplug.spotless</groupId>
+                <artifactId>spotless-maven-plugin</artifactId>
+                <version>${spotless.version}</version>
+                <configuration>
+                    <java>
+                        <googleJavaFormat>
+                            <version>1.15.0</version>
+                            <style>AOSP</style>
+                            <reflowLongStrings>true</reflowLongStrings>
+                        </googleJavaFormat>
+                    </java>
                 </configuration>
             </plugin>
         </plugins>
