--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.0.0</version>
                 <configuration>
-                    <mainClass>com.myorg.TicketsApp</mainClass>
+                    <mainClass>com.myorg.infrastructure.TicketsApp</mainClass>
                 </configuration>
             </plugin>
             <plugin>
